Closed
Bug 1485095
Opened Last year
Closed Last year
Fix for can't get VRSystemManagerExternal in Android
Categories
(Core :: WebVR, defect)
Core
WebVR
Not set
Tracking
()
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox63 | --- | fixed |
People
(Reporter: daoshengmu, Assigned: daoshengmu)
References
Details
Attachments
(1 file, 1 obsolete file)
This is a regression from Bug 1430038. GPUProcess is only running in Windows, so other platforms should be available to get the VRSystemManagerExternal.
Assignee | ||
Updated•Last year
|
Assignee: nobody → dmu
Assignee | ||
Comment 1•Last year
|
||
MozReview-Commit-ID: 4oN5TD4EuZK
Updated•Last year
|
Attachment #9002898 -
Attachment is obsolete: true
Assignee | ||
Comment 2•Last year
|
||
MozReview-Commit-ID: F82UoWhVVWs
Assignee | ||
Comment 3•Last year
|
||
I have tried the release build in FxR. It has resolved the immersive mode regression.
Comment 4•Last year
|
||
Comment on attachment 9002900 [details] Bug 1485095 - Fix can't get VRSystemManagerExternal in Android. :kip (Kearwood Gilbert) has approved the revision.
Attachment #9002900 -
Flags: review+
Pushed by dmu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/57ed7dc97b4f Fix can't get VRSystemManagerExternal in Android. r=kip
Comment 6•Last year
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/57ed7dc97b4f
Status: NEW → RESOLVED
Closed: Last year
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•