Bug 1485095 - Fix can't get VRSystemManagerExternal in Android. r=kip

MozReview-Commit-ID: F82UoWhVVWs

Differential Revision: https://phabricator.services.mozilla.com/D3915